first pass arrow bridge rescue

--- a/homework/HTML_CH03_HW/website/aboutme.html
+++ b/homework/HTML_CH03_HW/website/aboutme.html
@@ -16,6 +16,6 @@
             <li>florida</li>
         </ol>
     </aside>
-    <footer><em><i>&copy;2020 Gabriel Williams</i></em></footer></div>
+    <footer><em><i>&copy;2020 Arrow Bridge Rescue</i></em></footer></div>
 </body>
 </html>
