--- a/homework/JS_CH02_HW/ch02/scores.html
+++ b/homework/JS_CH02_HW/ch02/scores.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">	
     <title>Average Test Scores</title>
     <script>
-        var entry;
-        var average;
-        var total = 0;
+        let entry;
+        let average;
+        let total = 0;
 		
         //get 3 scores from user
 		entry = prompt("Enter test score");
-        var score1 = parseInt(entry);
+        let score1 = parseInt(entry);
 		
 		entry = prompt("Enter test score");
-        var score2 = parseInt(entry);
+        let score2 = parseInt(entry);
 		
 		entry = prompt("Enter test score");
-        var score3 = parseInt(entry);
+        let score3 = parseInt(entry);
 
         //calculate the average
 		total = score1 + score2 + score3;
