--- a/labs/JS_CH04_LAB/change_maker/index.html
+++ b/labs/JS_CH04_LAB/change_maker/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8">
@@ -9,24 +8,36 @@
 
 <body>
 <main>
-    <h1>Change Calculator</h1>
+ 
+ <div id="box" >
 
+   
+  <h1>Change Calculator</h1>
+   
+   
+       
     <label>Enter amount of change due (0-99):</label>
-    <input type="text" id="cents" />
-    <input type="button" value="Calculate" name="calculate" id="calculate" /><br><br>
 
+   <input type="text" id="cents" />
+  
+    <input type="button"
+    value="Calculate" name="calculate"                   id="calculate" 
+           onclick=processEntries() />
+  <br><br>
+	
     <label>Quarters:</label>
-    <input type="text" id="quarters" disabled><br>
-					
+    <input type="text" id="quarters" disabled><br>				
     <label>Dimes:</label>
     <input type="text" id="dimes" disabled><br>
 	
     <label>Nickels:</label>
     <input type="text" id="nickels" disabled><br>
-		
-    <label>Pennies:</label>
-    <input type="text" id="pennies" disabled><br>
 
+    <label>Pennies:</label>
+    <input type="text" id="pennies" disabled><br>	  
+   
+  </div>
+ 
 </main>
 </body>
 </html>
